# Notes_ninja

./: .env  .gitignore  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
notes/: admin.py  api.py  models.py  schemas.py  views.py
notes/migrations/: 0001_initial.py  0002_alter_note_completed.py
notes/templates/: detail.html  index.html
